--- a/src/styles/Typography.scss
+++ b/src/styles/Typography.scss
@@ -31,6 +31,16 @@
     }
   }
 
+  &-16 {
+    font-size: 16px;
+    line-height: 24px;
+    
+    &-600 {
+      @extend .title-16;
+      font-weight: 600;
+    }
+  }
+
   &-14 {
     font-size: 14px;
     line-height: 20px;
